package com.zx.flyweight;
/**
 * @author ZhangXiong
 * @version v12.0.1
 * @date 2020-03-09
 * 设计模式
 * 享元模式 池技术的实现
 */
public abstract class WebSite {

	public abstract void use(User user);//抽象方法
}
